--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 
-"BOT_TOKEN": "Your_Bot_Token",
+"BOT_TOKEN": "MTI5MDI0NTMzNzI1NjE2NTQ4MQ.GH9BoY.3XCE1DibEwlO8aKX4OiqjJlP1zl0i5kR8TDM7g",
 "Prefix": "-",
 "Time": 5000,
-"owners": ["ID1","ID2"]
+"owners": ["1148609662216831006","1148609662216831006"]
 
 }
